# flask-includes-captcha

./: .gitignore  LICENSE  Pipfile  README.md  changelog.md  pyproject.toml
src/flask_includes_captcha/: __init__.py  flask_includes_captcha.py
test/: test_flask_includes_captcha.py
