[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test"]


[project]
name = "flask-includes-captcha"
description = "A simple, limited (basic) wrap of the popular Captcha library for Flask projects."
authors = [
    {name = "Martin Heisler", email = "stripedkitefish@gmail.com"},
]
version = "0.2.0"
dependencies = [
    'captcha>=0.5.0',
    'pyjwt>=2.8.0',
    'flask',
    'flask-wtf',
    "joserfc"

]
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Internet"
]

[project.urls]
"Homepage" = "https://github.com/zfish85/flask-includes-captcha"